# honeycomb - addon module

CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

FILE(GLOB SRC_NODE
  git_mysql.h
  git_mysql.cc
  mysql.h
  mysql.cc
  addon.cc
)
ADD_LIBRARY(addon SHARED ${SRC_NODE})
ADD_DEPENDENCIES(addon mysqladapter)
ADD_DEPENDENCIES(addon mygit)
TARGET_LINK_LIBRARIES(addon mysqladapter)
TARGET_LINK_LIBRARIES(addon mygit)
#TARGET_LINK_LIBRARIES(addon hbase)
#TARGET_LINK_LIBRARIES(addon roger)
IF (MSVC_IDE)
  IF (CMAKE_SIZEOF_VOID_P EQUAL 8)
    TARGET_LINK_LIBRARIES(addon ${NODE_GYP_DIR}/x64/node.lib)
  ELSE ()
    TARGET_LINK_LIBRARIES(addon ${NODE_GYP_DIR}/ia32/node.lib)
  ENDIF()
ENDIF ()
#SET_TARGET_PROPERTIES(addon PROPERTIES CXX_STANDARD 11)
SET_TARGET_PROPERTIES(addon PROPERTIES SUFFIX ".node")
SET_TARGET_PROPERTIES(addon PROPERTIES PREFIX "")
