# honeycomb - redis module

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

FILE(GLOB SRC_REDIS *.c *.h)
ADD_LIBRARY(redis STATIC ${SRC_REDIS})
ADD_DEPENDENCIES(redis git2)
TARGET_LINK_LIBRARIES(redis git2)
TARGET_LINK_LIBRARIES(redis ${LIBREDIS_LIBRARY}/hiredis)
IF (MSVC_IDE)
    TARGET_LINK_LIBRARIES(redis ${LIBREDIS_LIBRARY}/Win32_Interop)
ENDIF ()
